--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                     <h4></h4>
                                     <span></span>
                                 </div> <!-- /.member-item -->
-                            </div> <!-- /.col-md-4 -->
+                            </div> /.col-md-4
                         </div> <!-- /.row -->
                     </div> <!-- /.about -->
 
@@ -265,8 +265,8 @@
                             <div class="col-md-12">
                                 <div class="toggle-content text-center spacing">
                                     <h3>Мої контакти</h3>
-                                    <p>Donec mattis enim sit amet nisl faucibus, eu pulvinar nibh facilisis. Aliquam erat volutpat. Vivamus tempus, nisi varius imperdiet molestie, velit mi feugiat felis, sit amet fringilla mi massa sit amet arcu. Mauris dictum nisl id felis lacinia congue. Aliquam lectus nisi, sodales in lacinia quis, lobortis vel sem.
-                                    <br><br><strong>Address:</strong> 123 Thamine Street, Digital Estate, Yangon 10620, Myanmar
+                                    <p>По всім питання з приводу надання моїх послуг звертайтеся з 07:15 до 18:00
+                                    <br><br><strong>Address:</strong> м.Київ, вул. Вацлава Гавела 18, магазин "Пчілка-Маркет"
                                     <br><strong>Email:</strong> petrovich_gay@gmail.com | <strong>Tel:</strong> +380 (67) 795 40 49</p>
                                 </div>
                             </div> <!-- /.col-md-12 -->
