--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
                             <div class="col-md-12 col-sm-12">
                                 <div class="toggle-content text-center" id="tab1">
                                     <h3>Моя історія</h3>
-                                    <p>Circle is one of free HTML5 website templates from templatemo. You may tell your friends about <strong><span class="blue">template</span><span class="green">mo</span></strong> website. Feel free to download, modify and use this template for your websites. You can easily change icons by <a rel="nofollow" href="http://fontawesome.info/font-awesome-icon-world-map/">Font Awesome</a>. Example: <strong>&lt;i class=&quot;fa fa-camera&quot;&gt;&lt;/i&gt;</strong> 
-                                    <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, repellat, aspernatur nihil quasi commodi laboriosam cumque est minus minima sit dicta adipisci possimus magnam. Sit, repudiandae, ut, error, voluptates aspernatur inventore quo earum reiciendis dolorum amet perspiciatis adipisci itaque voluptatum iste laboriosam sapiente hic autem blanditiis doloribus nihil.</p>
+                                    <p>Привіт всім. Мене звати Крижній Сергій Петрович, але ви мене можете знати як зам. начальніка.</p>
                                 </div>
 
                                 <div class="toggle-content text-center" id="tab2">
@@ -121,9 +120,9 @@
                             <div class="col-md-4 col-sm-4">
                                 <div class="member-item">
                                     <div class="thumb">
-                                        <img src="images/team/member-2.jpg" alt="Mary - Web Developer">
+                                        <img src="images/team/member-2.jpg" alt="">
                                     </div>
-                                    <h4></h4>
+                                    <h4>Максим</h4>
                                     <span></span>
                                 </div> <!-- /.member-item -->
                             </div> <!-- /.col-md-4 -->
@@ -132,8 +131,8 @@
                                     <div class="thumb">
                                         <img src="images/team/member-3.jpg" alt="Julia - Creative Director">
                                     </div>
-                                    <h4></h4>
-                                    <span></span>
+                                    <h4>Олег</h4>
+                                    <span>Олег Маямі</span>
                                 </div> <!-- /.member-item -->
                             </div> /.col-md-4
                         </div> <!-- /.row -->
