--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                         <img src="images/team/member-2.jpg" alt="">
                                     </div>
                                     <h4>Максим</h4>
-                                    <span></span>
+                                    <span>Сладкий стандарт</span>
                                 </div> <!-- /.member-item -->
                             </div> <!-- /.col-md-4 -->
                             <div class="col-md-4 col-sm-4">
