--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                         <img src="images/team/member-3.jpg" alt="Julia - Creative Director">
                                     </div>
                                     <h4>Олег</h4>
-                                    <span>Олег Маямі</span>
+                                    <span>Maimi Bitch</span>
                                 </div> <!-- /.member-item -->
                             </div> /.col-md-4
                         </div> <!-- /.row -->
