--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     Circle Template 
     http://www.templatemo.com/preview/templatemo_410_circle 
     -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/normalize.min.css">
@@ -97,15 +95,15 @@
 
                                 <div class="toggle-content text-center" id="tab2">
                                     <h3>Чим я займаюся</h3>
-                                    <p></p>
+                                    <p>Donec quis orci nisl. Integer euismod lacus nec risus sollicitudin molestie vel semper turpis. In varius imperdiet enim quis iaculis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris ac mauris aliquam magna molestie posuere in id elit. Integer semper metus felis, fringilla congue elit commodo a. Donec eget rutrum libero.
+                                    <br><br>Nunc dui elit, vulputate vitae nunc sed, accumsan condimentum nisl. Vestibulum a dui lectus. Vivamus in justo hendrerit est cursus semper sed id nibh. Donec ut dictum lorem, eu molestie nisi. Quisque vulputate quis leo lobortis fermentum. Ut sit amet consectetur dui, vitae porttitor lectus.</p>
                                 </div>
 
                                 <div class="toggle-content text-center" id="tab3">
                                     <h3>Моя команда</h3>
-                                    <p>Моя команда налічує невелику кількість, але це спеціалісти дуже широкого профілю.
-                                        <br>Дмитро - має дуже великий спект "навичок". Також він є  креативним директором моєї команди.</br>
-                                        <br>Максим - </br>
-                                    </p>
+                                    <p>Aliquam erat volutpat. Vivamus tempus, nisi varius imperdiet molestie, velit mi feugiat felis, sit amet fringilla mi massa sit amet arcu. Mauris dictum nisl id felis lacinia congue. Aliquam lectus nisi, sodales in lacinia quis, lobortis vel sem. Vestibulum elit nisi, placerat eget auctor ut, dictum at libero.
+                                    <br><br>Proin enim odio, eleifend eget euismod vitae, pharetra sed lacus. Donec at sapien nunc. Mauris vehicula quis diam nec dignissim. Nulla consequat nibh mattis metus sodales, at eleifend tortor tempor. Sed auctor lacus felis. </p>
+                                </div>
                             </div> <!-- /.col-md-12 -->
                         </div> <!-- /.row -->
 
@@ -125,7 +123,7 @@
                                         <img src="images/team/member-2.jpg" alt="">
                                     </div>
                                     <h4>Максим</h4>
-                                    <span>Сладкий стандарт</span>
+                                    <span></span>
                                 </div> <!-- /.member-item -->
                             </div> <!-- /.col-md-4 -->
                             <div class="col-md-4 col-sm-4">
@@ -134,7 +132,7 @@
                                         <img src="images/team/member-3.jpg" alt="Julia - Creative Director">
                                     </div>
                                     <h4>Олег</h4>
-                                    <span>Maimi Bitch</span>
+                                    <span>Олег Маямі</span>
                                 </div> <!-- /.member-item -->
                             </div> /.col-md-4
                         </div> <!-- /.row -->
