--- a/index.html
+++ b/index.html
@@ -90,19 +90,36 @@
                             <div class="col-md-12 col-sm-12">
                                 <div class="toggle-content text-center" id="tab1">
                                     <h3>Моя історія</h3>
-                                    <p>Привіт всім. Мене звати Крижній Сергій Петрович, але ви мене можете знати як зам. начальніка.</p>
+                                    <p>Привіт всім. Мене звати Крижній Сергій Петрович, але ви мене можете знати як зам. начальніка, авганець, бригадир, Петрович, зая.
+                                        <br>Хочу розповісти Вам, про себе, про те чим займаюсь та чим живу.</br>
+                                        <br>На протязі життя я відчував що чогось мені не вистачає, не розкривався на повну.</br>
+                                        <br>І ось одного чудового дня, я потрапив до клубу однодумців, які також на початку свого шляху шукали себе, але раніше за мене зрозуміли до лежить їх душа та тіло. Спочатку я сумнівася чи до цього лежить моя душа, але ж як кажуть неспробуєш не дізнаєшся.</br>
+                                        <br>І ось одного дня я вирішив зробити свій камінг-аут, після нього я ніби-то ожив.
+                                        <br>Я зрозумів що це те чим я хочу займатися і чому буду віддавати всі свої сили.</br>
+                                </br>
+                                    </p>
                                 </div>
 
                                 <div class="toggle-content text-center" id="tab2">
                                     <h3>Чим я займаюся</h3>
-                                    <p>Donec quis orci nisl. Integer euismod lacus nec risus sollicitudin molestie vel semper turpis. In varius imperdiet enim quis iaculis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris ac mauris aliquam magna molestie posuere in id elit. Integer semper metus felis, fringilla congue elit commodo a. Donec eget rutrum libero.
-                                    <br><br>Nunc dui elit, vulputate vitae nunc sed, accumsan condimentum nisl. Vestibulum a dui lectus. Vivamus in justo hendrerit est cursus semper sed id nibh. Donec ut dictum lorem, eu molestie nisi. Quisque vulputate quis leo lobortis fermentum. Ut sit amet consectetur dui, vitae porttitor lectus.</p>
+                                    <p><br>Надаю послуги різноманітного типу, таким же однодумцям як і я.</br>
+                                        <br><strong>Щедрый милый старичок? Попадай на мой крючок.... </strong></br>
+                                    </p>
                                 </div>
 
                                 <div class="toggle-content text-center" id="tab3">
                                     <h3>Моя команда</h3>
-                                    <p>Aliquam erat volutpat. Vivamus tempus, nisi varius imperdiet molestie, velit mi feugiat felis, sit amet fringilla mi massa sit amet arcu. Mauris dictum nisl id felis lacinia congue. Aliquam lectus nisi, sodales in lacinia quis, lobortis vel sem. Vestibulum elit nisi, placerat eget auctor ut, dictum at libero.
-                                    <br><br>Proin enim odio, eleifend eget euismod vitae, pharetra sed lacus. Donec at sapien nunc. Mauris vehicula quis diam nec dignissim. Nulla consequat nibh mattis metus sodales, at eleifend tortor tempor. Sed auctor lacus felis. </p>
+                                    <p>Моя команда невелика, але всі виключно спеціалісти широкого профілю. Зараз познайомлю, Вас, 
+                                        з ними.
+                                        <br>Дмитро - дуже класний спеціаліст. ДУЖЕ креативний і винахідливий спеціаліст, якщо Ви не впевнені в тому, чого бажаєте, 
+                                        <em>знайте</em> в нього є вже сценарій який задовільнить всі Ваші потреби.
+                                        <br>Максим - спеціаліст з великої букви. Опора нашої невеличкої команди, завжди підставить свою
+                                         частину тіла за необхідності.
+                                        <br>Олег - наймолодший у нашій команді, проте його навички та відданість справі це щось 
+                                        фантастичне.</br>
+                                        <br>І я Ваш скромний Петрович - адміністратор даної команди клубу <strong>"Рай"</strong>.</br>
+                                        <br><strong><u>Клуб "Рай" - будь-яку попу обирай.</u></strong></br>
+                                    </br></br></p>
                                 </div>
                             </div> <!-- /.col-md-12 -->
                         </div> <!-- /.row -->
@@ -123,16 +140,16 @@
                                         <img src="images/team/member-2.jpg" alt="">
                                     </div>
                                     <h4>Максим</h4>
-                                    <span></span>
+                                    <span>Солодкий стандарт</span>
                                 </div> <!-- /.member-item -->
                             </div> <!-- /.col-md-4 -->
                             <div class="col-md-4 col-sm-4">
                                 <div class="member-item">
                                     <div class="thumb">
-                                        <img src="images/team/member-3.jpg" alt="Julia - Creative Director">
+                                        <img src="images/team/member-3.jpg" alt="Oleg - Miami">
                                     </div>
                                     <h4>Олег</h4>
-                                    <span>Олег Маямі</span>
+                                    <span>Miami Bitch</span>
                                 </div> <!-- /.member-item -->
                             </div> /.col-md-4
                         </div> <!-- /.row -->
@@ -160,8 +177,7 @@
                             <div class="col-md-12 col-sm-12">
                                 <div class="toggle-content text-center" id="tab4">
                                     <h3>Мої послуги</h3>
-                                    <p>You can easily change icons by <a rel="nofollow" href="http://fontawesome.info/font-awesome-icon-world-map/">Font Awesome</a>. Example: <strong>&lt;i class=&quot;fa fa-users&quot;&gt;&lt;/i&gt;</strong> In varius eros ac est interdum, quis scelerisque elit semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                                    <br><br>Donec mattis enim sit amet nisl faucibus, eu pulvinar nibh facilisis. Aliquam erat volutpat. Vivamus tempus, nisi varius imperdiet molestie, velit mi feugiat felis, sit amet fringilla mi massa sit amet arcu. Mauris dictum nisl id felis lacinia congue. Aliquam lectus nisi, sodales in lacinia quis, lobortis vel sem. Vestibulum elit nisi, placerat eget auctor ut, dictum at libero.</p>
+                                    <p></p>
                                 </div>
 
                                 <div class="toggle-content text-center" id="tab5">
@@ -311,8 +327,8 @@
     <div class="container-fluid">   
         <div class="row">
             <div class="col-md-12 footer">
-                <p id="footer-text">Copyright &copy; 2084 <a href="#">Company Name</a>
-                 | Photos by <a rel="nofollow" href="http://unsplash.com">Unsplash</a></p>
+                <p id="footer-text">Copyright &copy; 2024 <a href="#">Club "Paradise"</a>
+                 | Photos by <a rel="nofollow" href="http://unsplash.com">Pchilka-family</a></p>
             </div><!-- /.footer --> 
         </div>
     </div> <!-- /.container-fluid -->
