--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                          частину тіла за необхідності.
                                         <br>Олег - наймолодший у нашій команді, проте його навички та відданість справі це щось 
                                         фантастичне.</br>
-                                        <br>І я Ваш скромний Петрович - адміністратор даної команди клубу <strong>"Рай"</strong>.</br>
+                                        <br>І я Ваш скромний 🥰🥰🥰Петрович👅👅👅 - адміністратор даної команди клубу <strong>"Рай"</strong>.</br>
                                         <br><strong><u>Клуб "Рай" - будь-яку попу обирай.</u></strong></br>
                                     </br></br></p>
                                 </div>
@@ -280,7 +280,7 @@
                             <div class="col-md-12">
                                 <div class="toggle-content text-center spacing">
                                     <h3>Мої контакти</h3>
-                                    <p>По всім питання з приводу надання моїх послуг звертайтеся з 07:15 до 18:00
+                                    <p>По всім питання з приводу надання моїх послуг звертайтеся з 07:15 до 18:00.
                                     <br><br><strong>Address:</strong> м.Київ, вул. Вацлава Гавела 18, магазин "Пчілка-Маркет"
                                     <br><strong>Email:</strong> petrovich_gay@gmail.com | <strong>Tel:</strong> +380 (67) 795 40 49</p>
                                 </div>
