--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     <h3>Моя команда</h3>
                                     <p>Моя команда невелика, але всі виключно спеціалісти широкого профілю. Зараз познайомлю, Вас, 
                                         з ними.
-                                        <br>Дмитро - дуже класний спеціаліст. ДУЖЕ креативний і винахідливий спеціаліст, якщо Ви не впевнені в тому, чого бажаєте, 
+                                        <br>Дмитро - ДУЖЕ креативний і винахідливий спеціаліст, якщо Ви не впевнені в тому, чого бажаєте, 
                                         <em>знайте</em> в нього є вже сценарій який задовільнить всі Ваші потреби.
                                         <br>Максим - спеціаліст з великої букви. Опора нашої невеличкої команди, завжди підставить свою
                                          частину тіла за необхідності.
@@ -254,22 +254,22 @@
                                     </a>
                                 </div> <!-- /.g-item -->
                             </div> <!-- /.col-md-4 -->
-                            <div class="col-md-4 col-ms-6">
+                            <!-- <div class="col-md-4 col-ms-6">
                                 <div class="g-item">
                                     <img src="images/gallery/g8.jpg" alt="">
                                     <a data-rel="lightbox" class="overlay" href="images/gallery/g8.jpg">
                                         <span>+</span>
                                     </a>
                                 </div> <!-- /.g-item -->
-                            </div> <!-- /.col-md-4 -->
-                            <div class="col-md-4 col-ms-6">
+                            <!-- </div> /.col-md-4 -->
+                            <!-- <div class="col-md-4 col-ms-6">
                                 <div class="g-item">
                                     <img src="images/gallery/g9.jpg" alt="">
                                     <a data-rel="lightbox" class="overlay" href="images/gallery/g9.jpg">
                                         <span>+</span>
                                     </a>
                                 </div> <!-- /.g-item -->
-                            </div> <!-- /.col-md-4 -->
+                            <!-- </div> /.col-md-4 --> --> -->
 
                         </div> <!-- /.row -->
                     </div> <!-- /.gallery -->
